crates/validator/tests/ui/validator_on_enum.stderr
error: Validator derive can only be used on structs
 --> tests/ui/validator_on_enum.rs:6:6
  |
6 | enum Bad {
  |      ^^^
